refactored code to be more readable, removed https server, adjusted token generation mechanism
