# docs/swagger.json
@@ -7,7 +7,12 @@
     },
     "paths": {
         "/auth": {
-            "post": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -17,59 +22,14 @@
                 "tags": [
                     "auth"
                 ],
+                "summary": "invalidate token",
                 "parameters": [
                     {
-                        "description": "client information",
-                        "name": "client",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/api.AuthAccess"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/api.HttpResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/api.HttpResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/api.HttpResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/auth/access": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "auth"
-                ],
-                "parameters": [
-                    {
-                        "description": "client information",
-                        "name": "client",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/api.AuthAccess"
-                        }
+                        "type": "string",
+                        "description": "the token string to invalidate",
+                        "name": "token",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -84,10 +44,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/api.AuthInfo"
-                                            }
+                                            "type": "string"
                                         }
                                     }
                                 }
@@ -107,10 +64,8 @@
                         }
                     }
                 }
-            }
-        },
-        "/auth/refresh": {
-            "get": {
+            },
+            "post": {
                 "security": [
                     {
                         "BearerAuth": []
@@ -125,11 +80,35 @@
                 "tags": [
                     "auth"
                 ],
+                "summary": "generate token",
+                "parameters": [
+                    {
+                        "description": "client information",
+                        "name": "client",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.Auth"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.HttpResponse"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/api.HttpResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
@@ -161,7 +140,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "category"
+                    "dropdown"
                 ],
                 "responses": {
                     "200": {
@@ -208,7 +187,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "category"
+                    "dropdown"
                 ],
                 "responses": {
                     "200": {
@@ -255,8 +234,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "category"
+                    "dropdown"
                 ],
+                "summary": "type: income / expense",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -304,6 +284,7 @@
                 "tags": [
                     "event"
                 ],
+                "summary": "upsert event",
                 "parameters": [
                     {
                         "description": "event information",
@@ -344,6 +325,7 @@
                         "BearerAuth": []
                     }
                 ],
+                "description": "please input filter criteria body must be in JSON format. example: {\"_id\": \"123\"}",
                 "consumes": [
                     "application/json"
                 ],
@@ -353,6 +335,7 @@
                 "tags": [
                     "event"
                 ],
+                "summary": "get events by filter",
                 "parameters": [
                     {
                         "description": "filter criteria in json format",
@@ -418,6 +401,7 @@
                 "tags": [
                     "event"
                 ],
+                "summary": "get all events in a given month",
                 "parameters": [
                     {
                         "type": "string",
@@ -485,6 +469,7 @@
                         "BearerAuth": []
                     }
                 ],
+                "description": "get income + expense summary for each category in a given month; also output total income + spending in said month",
                 "consumes": [
                     "application/json"
                 ],
@@ -494,6 +479,7 @@
                 "tags": [
                     "event"
                 ],
+                "summary": "income + expense summary in a given month",
                 "parameters": [
                     {
                         "type": "string",
@@ -556,6 +542,11 @@
         },
         "/ping": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -574,24 +565,13 @@
         }
     },
     "definitions": {
-        "api.AuthAccess": {
+        "api.Auth": {
             "type": "object",
             "properties": {
                 "identifier": {
                     "type": "string"
                 },
                 "secret_key": {
-                    "type": "string"
-                }
-            }
-        },
-        "api.AuthInfo": {
-            "type": "object",
-            "properties": {
-                "access_token": {
-                    "type": "string"
-                },
-                "refresh_token": {
                     "type": "string"
                 }
             }
@@ -673,7 +653,7 @@
     },
     "securityDefinitions": {
         "BearerAuth": {
-            "description": "Type \"Bearer {token}\" to authenticate",
+            "description": "! IMPORTANT ! Please prepend Bearer manually. Example: \"Bearer {token}\"",
             "type": "apiKey",
             "name": "Authorization",
             "in": "header"
